<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="RampGeneratorInput" Id="{517b22aa-fcdf-4f11-ba92-b12215a269df}">
    <Declaration><![CDATA[TYPE RampGeneratorInput :
STRUCT
	restart : BOOL;
	targetValue : REAL;
	rampTime : UINT := 1;
	tTaskCycleTime : TIME := T#100MS;
 	tCtrlCycleTime : TIME := T#100MS;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>