<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_RecipeAnalogInputControlSequencer" Id="{e120b0c2-c4cf-40c9-aa7e-95c0a8deddb6}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_RecipeAnalogInputControlSequencer
VAR_INPUT
	rampTime: UINT;
END_VAR
VAR_IN_OUT
	rRecipe: ARRAY[1..GVL_IO.nNumController] OF REAL;
END_VAR
VAR
	i: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR i:= 1 TO GVL_IO.nNumMFC DO
	IF 0 <= rRecipe[i] AND GVL_IO.aMaxValueController[i] <> 0 THEN
		GVL_IO.aController[i].input.restart := TRUE;
		GVL_IO.aController[i].input.rampTime := rampTime; 
		GVL_IO.aController[i].input.targetValue := rRecipe[i] / GVL_IO.aMaxValueController[i] * GVL_IO.EL3064MaxValueH;
	END_IF
END_FOR

FOR i:= 1 TO GVL_IO.nNumFurnaceTemp DO
	IF 0 <= rRecipe[i + GVL_IO.nNumMFC] THEN
		GVL_IO.aController_TempContoller[i].input.restart := TRUE;
		GVL_IO.aController_TempContoller[i].input.rampTime := rampTime; 
		GVL_IO.aController_TempContoller[i].input.targetValue := rRecipe[i + GVL_IO.nNumMFC];
	END_IF
END_FOR]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>